[project]
name = "edgeai-hw6"
version = "0.1.0"
description = "HW6: Optimized Edge-AI Service with CI/CD"
requires-python = "==3.10.*"
dependencies = [
    "paho-mqtt>=2.0",
    "numpy>=1.26,<2",
]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    # cv2 + paho are needed by tests because src/inference_node.py
    # imports them at module load. Tests then mock the actual behavior.
    "opencv-python==4.10.0.84",
]
quality = [
    "ruff>=0.6",
    "mypy>=1.8",
    "bandit>=1.7",
    "pylint>=3.0",
]

[tool.pdm.scripts]
test = {shell = "echo; echo 'pytest [test] -'; pytest"}
lint = {shell = "echo; echo 'ruff check [lint] -'; ruff check ."}
format = {shell = "echo; echo 'ruff format [format] -'; ruff format ."}
check = {composite = ["format-check", "lint", "typecheck", "security", "pylint"]}
ci = {composite = ["check", "test-cov"]}

[tool.pdm.scripts.test-cov]
shell = """
echo; echo 'pytest + coverage [test-cov] -'; \
pytest --ignore tests/integration --cov=src --cov-report term-missing \
--cov-report html --cov-fail-under=90 \
"""

[tool.pdm.scripts.lint-fix]
shell = """
echo; echo 'ruff check-fix [lint-fix] -'; \
ruff check --fix . \
"""

[tool.pdm.scripts.format-check]
shell = """
echo; echo 'ruff format-check [format-check] -'; \
ruff format --check . \
"""

[tool.pdm.scripts.typecheck]
shell = """
echo; echo 'mypy [typecheck] -'; \
mypy src/inference_node.py src/healthcheck.py src/mqtt_publisher.py \
calibration/calibrate_int8.py \
"""

[tool.pdm.scripts.security]
shell = """
echo; echo 'bandit [security] -'; \
bandit -r src calibration -c pyproject.toml \
"""

[tool.pdm.scripts.pylint]
shell = """
echo; echo 'pylint [pylint] -'; \
pylint src/inference_node.py src/healthcheck.py src/mqtt_publisher.py \
calibration/calibrate_int8.py --fail-under=7.0 \
"""

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py", "tests/*"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", ".pdm-build"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "B",                # flake8-bugbear
    "UP",               # pyupgrade
    "SIM",              # flake8-simplify
    "N",                # pep8-naming
    "RUF",              # ruff-specific
    "PLR2004",          # magic-value-comparison
    "ANN001", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ANN401", # flake8-annotations
    "D",                # pydocstyle
]
ignore = [
    "E722",             # bare-except paho callbacks swallow ALL exceptions
    "RUF001", "RUF002", "RUF003", # ambiguous unicode (false positives in 中文 file headers)
    "RUF005",           # collection-literal-concatenation (style preference, not a bug)
    "N802",             # invalid-function-name (http.server's do_GET is fixed by stdlib)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004", 
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", 
    "ANN001", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206"
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = false
suppress-dummy-args = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_any_explicit = true

[[tool.mypy.overrides]]
module = ["cv2", "paho.mqtt", "paho.mqtt.client", "paho.mqtt.enums", "ultralytics", "yaml"]
ignore_missing_imports = true

[tool.bandit]
skips = [
    "B101", # assert_used - pytest tests legitimately use bare assert
    "B108", # hardcoded_tmp_directory - test fixtures use predictable paths
]
exclude_dirs = ["tests", ".venv", ".mypy_cache", ".pdm-build"]

[tool.pylint.main]
ignored-modules = ["cv2", "ultralytics"]

[tool.pylint.basic]
no-docstring-rgx = "^_"

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    "too-few-public-methods",
    "fixme",
    "invalid-name",
    "import-outside-toplevel", # lazy-import ultralytics to keep x86 tests fast
]

[tool.pylint.design]
max-args = 8
max-attributes = 10